[metadata]
name = suki
version = 0.0.3
description = Suki is a Python package manager created to make file organization more easily accessible
long_description = file: README.md
keywords = suki, package-manager, cli, cybersuki
license = BSD 2-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = suki
install_requires =
    argparse
    faye
python_requires = >=3.6

[options.entry_points]
console_scripts =
    suki = suki.suki:Suki.main